--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -173,24 +173,24 @@ nav > ul > li > a:hover {
 .hero-info > h1 {
   font-size: clamp(1rem, 1.7rem, 2.5rem);
   font-weight: 900;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .hero-info > p {  
   font-size: clamp(.9rem, .9rem, 1.5rem);
   line-height: 1.3;
-  margin-bottom: 1.5rem;
 }
 
 .spock {
-  color: #6E07F3;
+  color: var(--indigo);
+  font-size: 2rem;
 }
 
 .social-icons {
   display: flex;
   gap: 1rem;
   align-items: center;
-  margin-bottom: 1rem;
+  margin: 1rem 0 1rem 0;
 }
 
 .social-icons a:hover {
@@ -209,46 +209,72 @@ nav > ul > li > a:hover {
   padding-right: 1rem;
   width: 230px;
   height: auto;
-  border-radius: 34% 66% 47% 53% / 37% 18% 82% 63% ;
-  transition: border-radius 500ms ease-in-out;
+  border-radius: 81% 19% 69% 31% / 41% 73% 27% 59% ;
   cursor: pointer;
+  animation: border-animation 6s infinite;
 }
 
 .hero-img img:hover {
- border-radius: 67% 33% 22% 78% / 57% 44% 56% 43% ;
+ transform: scale(1.05);
+ filter: brightness(1.2);
 }
 
-.hero-img img:hover {
-  transform: scale(1.05);
-  filter: brightness(1.2);
+@keyframes border-animation {
+  0% {
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    box-shadow: 15px 15px 50px rgba(0,0,0,0.2);
+  }
+  25% { 
+    border-radius: 58% 42% 75% 25% / 76% 46% 54% 24%;
+  }
+  50% {
+    border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%;
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2)
+  }
+  75% {
+    border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%
+  }
 }
 
 /* Tech article */
 .tech-container {
-  padding-left: 3em;;
-  padding-right: 3em;;
-  margin-top: 4em;
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  gap: 5rem;
-}
-
-.tech-item {
+  margin-top: 5rem;
   text-align: center;
-  margin: 20px;
 }
 
-.tech-item i {
-  margin-top: 10px;
-  font-size: clamp(3rem, 4rem, 5rem);
+.icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+  padding: 0 1rem 0 1rem;
+}
+
+.icon-list svg {
+  margin-top: 30px;
+  width: 4rem;
+}
+
+.github {
+  color: var(--textWhite);
 }
 
 .tech-item:hover {
   transform: scale(1.1);
   cursor: pointer;
   color: var(--indigo);
+}
+
+/* Devices container */
+.devices-container {
+  display: flex;
+  justify-content: center;
+}
+
+.devices-container img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
 }
 
 /* about article */
@@ -281,7 +307,7 @@ nav > ul > li > a:hover {
 }
 
 .about-content > p {
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1.75;
 }
 
@@ -411,6 +437,7 @@ footer {
   /* Hero article */
   .hero-container {
     margin-top: calc(var(--distanceArticles) + 5rem);
+    text-align: center;
   }
 
   .hero-about {
@@ -418,8 +445,11 @@ footer {
     text-align: center;
   }
 
+  .social-icons {
+    justify-content: center;
+  }
+
   .hero {
-    flex-direction: column;
     gap: 1rem;
   }
 
@@ -428,6 +458,10 @@ footer {
     margin-top: 1em;
     gap: 1rem;
     margin-top: var(--distanceArticles);
+  }
+
+  .tech-item i {
+    margin-top: 10px;
   }
 
   /* about article */
